fix menu and editor z-index

--- a/app/client/ui/edit-toolbox.scss
+++ b/app/client/ui/edit-toolbox.scss
@@ -2,7 +2,7 @@
   --edit-content: 260px;
   --edit-menus-size: 250px;
   --edit-menus-backdrop: 15px;
-  --edit-menus-z-index: 150;
+  --edit-menus-z-index: 6;
 
   --edit-menus-icons-size: 36px;
   --edit-menus-shape-border: #23ABEE;
