--- a/app/client/ui/radial-menu.scss
+++ b/app/client/ui/radial-menu.scss
@@ -6,7 +6,7 @@ $label-background-color: #2b2d3d;
 $label-text-color: white;
 $item-background-color: #2b2d3de6;
 $item-pressed-color: #02a3ff;
-$z-index: 100;
+$z-index: 4;
 
 .radial-menu-container {
   position: absolute;
